# mc-proxy-v2

./: .gitignore  1.16 item ids.txt  Cargo.toml  config.toml  config.yaml  convert.py  out.txt  palette.json  readme.md
.github/workflows/: base.yml
cfb8/: Cargo.toml
cfb8/benches/: cfb8.rs
cfb8/src/: lib.rs
cipher/: Cargo.toml
cipher/src/: lib.rs  single.rs
config-loader/: Cargo.toml
config-loader/src/: lib.rs
maion-core/: Cargo.toml
maion-core/src/: types.rs
packet/: Cargo.toml
packet/src/: error.rs  lib.rs  packet.rs  raw_packet.rs  state.rs  traits.rs  types.rs
packet/src/types/: bools.rs  chat.rs  identifier.rs  len_prefixed_vec.rs  long.rs  nums.rs  options.rs  string.rs  ushort.rs  uuid.rs  varint.rs  varint_enum.rs  varlong.rs  vecs.rs
plugin/: Cargo.toml
plugin-interface/: Cargo.toml  build.rs
plugin-interface/src/: lib.rs
plugin-loader/: Cargo.toml
plugin-loader/src/: grpc.rs  lib.rs  rainbowify.rs
plugin/src/: lib.rs
plugin/src/plugins/: mod.rs  rainbowify.rs
plugins/test-plugin/: Cargo.toml
plugins/test-plugin/src/: main.rs
proto/: plugins.proto
protocol/: Cargo.toml
protocol/src/: lib.rs  macros.rs  parsable.rs  utils.rs  v754.rs
protocol/src/clientbound/login/: disconnect.rs  enq_request.rs  login_success.rs  plugin_req.rs  set_compression.rs
protocol/src/clientbound/status/: status_pong.rs  status_response.rs
protocol/src/serverbound/handshaking/: handshake.rs
protocol/src/serverbound/login/: login_start.rs
protocol/src/serverbound/play/: chat_message.rs
proxy/: Cargo.toml
proxy/src/: conf.rs  logging.rs  main.rs  parsable.rs  plugin.rs  types.rs  utils.rs
proxy/src/plugins/: mod.rs
proxy/src/protocol/: mod.rs
proxy/src/protocol/clientbound/login/: disconnect.rs  enq_request.rs  login_success.rs  set_compression.rs
proxy/src/protocol/serverbound/handshaking/: handshake.rs
proxy/src/protocol/serverbound/login/: login_start.rs
proxy/src/protocol/serverbound/status/: mod.rs
src/: cipher.rs  conf.rs  functions.rs  gen_packet.rs  logging.rs  macros.rs  main.rs  packet.rs  parsable.rs  plugin.rs  raw_packet.rs  raw_packet.rs.notathing  types.rs  utils.rs
src/cipher/: cfb8.rs
src/clientbound/: login.rs  mod.rs  play.rs  status.rs
src/clientbound/login/: enq_request.rs  mod.rs
src/clientbound/play/: ack_player_digging.rs  mod.rs  resource_pack_send.rs  spawn_entity.rs  spawn_living_entity.rs  spawn_player.rs  tab_complete.rs  update_health.rs
src/clientbound/status/: status_pong.rs
src/plugins/: anti_command_fail.rs  book_copy.rs  fake_fly.rs  gamemode.rs  join_game_test.rs  jumpboostcommand.rs  jumptrain.rs  mod.rs  rainbowify.rs  swimspeedcommand.rs  swimtrain.rs  test_plugin.rs  update_game.rs  velocity_monitor.rs  weird_sky.rs
src/protocol/: mod.rs  v754.rs
src/protocol/clientbound/login/: disconnect.rs  enq_request.rs  login_success.rs  mod.rs  plugin_req.rs  set_compression.rs
src/protocol/clientbound/play/: chunk_data.rs  display_scoreboard.rs  entity_effect.rs  join_game.rs  mod.rs  player_abilities.rs  player_position_and_look.rs  resource_pack_send.rs  set_passenger.rs  spawn_living_entity.rs  spawn_player.rs  spawn_xp_orb.rs  tab_complete.rs  update_health.rs  update_score.rs
src/protocol/clientbound/status/: mod.rs  status_pong.rs  status_response.rs
src/protocol/serverbound/handshaking/: handshake.rs
src/protocol/serverbound/login/: enc_response.rs  login_start.rs  mod.rs  plugin_response.rs
src/protocol/serverbound/play/: chat_message.rs  client_settings.rs  mod.rs  player_position.rs  player_position_and_rotation.rs  resource_pack_status.rs
src/protocol/serverbound/status/: status_ping.rs  status_request.rs
src/protocol/v754/: lib.rs  mod.rs
src/protocol/v754/clientbound/login/: disconnect.rs  enq_request.rs  login_success.rs  plugin_req.rs  set_compression.rs
src/protocol/v754/clientbound/play/: ack_player_digging.rs  chat_message.rs  chunk_data.rs  display_scoreboard.rs  entity_effect.rs  join_game.rs  keepalive.rs  mod.rs  open_book.rs  player_abilities.rs  player_position_and_look.rs  resource_pack_send.rs  scoreboard_objective.rs  set_passenger.rs  spawn_entity.rs  spawn_living_entity.rs  spawn_painting.rs  spawn_player.rs  spawn_xp_orb.rs  tab_complete.rs  teams.rs  update_health.rs  update_score.rs  window_items.rs
src/protocol/v754/clientbound/status/: status_pong.rs  status_response.rs
src/protocol/v754/lib/clientbound/login/: enq_request.rs  login_success.rs
src/protocol/v754/lib/clientbound/play/: mod.rs  update_health.rs
src/protocol/v754/lib/serverbound/handshaking/: handshake.rs  mod.rs
src/protocol/v754/lib/serverbound/login/: enc_response.rs  plugin_response.rs
src/protocol/v754/lib/serverbound/play/: chat_message.rs
src/protocol/v754/serverbound/handshaking/: handshake.rs
src/protocol/v754/serverbound/login/: enc_response.rs  login_start.rs  plugin_response.rs
src/protocol/v754/serverbound/play/: chat_message.rs  client_settings.rs  entity_action.rs  keepalive.rs  mod.rs  player_block_placement.rs  player_position.rs  player_position_and_rotation.rs  resource_pack_status.rs  steer_vehicle.rs
src/protocol/v754/serverbound/status/: status_ping.rs  status_request.rs
src/serverbound/: handshaking.rs  login.rs  status.rs
src/serverbound/handshaking/: handshake.rs
src/serverbound/login/: mod.rs
src/serverbound/play/: chat_message.rs  mod.rs
src/serverbound/status/: status_ping.rs  status_request.rs
