[package]
authors = ["zegevlier <iamascratcher@gmail.com>"]
edition = "2018"
name = "mc-proxy-v2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.4"
async-trait = "0.1.50"
cfb8 = {path = "./cfb8"}
colored = "2.0.0"
config = "0.11.0"
deadqueue = {version = "0.2.0", features = ["unlimited"]}
dyn-clone = "1.0.4"
env_logger = "0.9.0"
futures-util = "0.3.15"
hex = "0.4.3"
log = "0.4.14"
maplit = "1.0.2"
miniz_oxide = "0.4.4"
num-bigint-dig = "0.7.0"
parking_lot = "0.11.1"
rand = "0.8.4"
regex = "1.5.3"
reqwest = {version = "0.11.4", features = ["json", "blocking"]}
rsa = "0.4.0"
rsa-der = "0.2.1"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.24"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
tokio = {version = "1.8.2", features = ["net", "rt-multi-thread", "macros", "io-util", "time"]}
tokio-tungstenite = "0.15.0"
trust-dns-resolver = "0.20.3"
