[package]
authors = ["zegevlier <iamascratcher@gmail.com>"]
edition = "2018"
name = "mc-proxy-v2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.5"
async-trait = "0.1.51"
cipher = {version = "0.3", features = ["dev"]}
colored = "2.0.0"
config = "0.11.0"
deadqueue = {version = "0.2.0", features = ["unlimited"]}
dyn-clone = "1.0.4"
env_logger = "0.9.0"
erased-serde = "0.3.16"
futures-util = "0.3.18"
hematite-nbt = "0.5.2"
hex = "0.4.3"
log = "0.4.14"
maplit = "1.0.2"
miniz_oxide = "0.5.1"
num-bigint-dig = "0.7.0"
parking_lot = "0.11.2"
rand = "0.8.4"
regex = "1.5.3"
reqwest = {version = "0.11.7", features = ["json", "blocking"]}
rsa = "0.5.0"
rsa-der = "0.3.0"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.24"
serde = {version = "1.0.150", features = ["derive"]}
serde_json = "1.0.72"
tokio = {version = "1.14.0", features = ["net", "rt-multi-thread", "macros", "io-util", "time"]}
tokio-tungstenite = {version = "0.16.0", features = ["native-tls"]}
trust-dns-resolver = "0.20.3"
