[package]
authors = ["RustCrypto Developers"]
categories = ["cryptography", "no-std"]
description = "Generic 8-bit Cipher Feedback (CFB8) mode implementation."
documentation = "https://docs.rs/cfb8"
edition = "2018"
keywords = ["crypto", "stream-cipher", "block-mode"]
license = "MIT OR Apache-2.0"
name = "cfb8"
readme = "README.md"
repository = "https://github.com/RustCrypto/stream-ciphers"
version = "0.7.1"

[dependencies]
cipher = "0.3"

[dev-dependencies]
aes = {version = "0.7", features = ["force-soft"]}# Uses `force-soft` for MSRV 1.41
cipher = {version = "0.3", features = ["dev"]}
hex-literal = "0.2"
