[package]
edition = "2021"
name = "config_loader"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = {version = "0.11.0", default-features = false, features = ["yaml"]}
serde = {version = "1.0.131", features = ["derive"]}
