[package]
edition = "2021"
name = "plugin_interface"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9.0"
tonic = {version = "0.6.2"}

[build-dependencies]
tonic-build = {version = "0.6.2", features = ["prost"], default_features = false}
