[package]
name = "plugin_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = {path = "../protocol"}
plugin = {path = "../plugin"}
packet = {path = "../packet"}
mcore = {path = "../maion-core"}
regex = "1.5.4"
log = "0.4.14"