[package]
edition = "2021"
name = "plugin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.4"
log = "0.4.14"
mcore = {path = "../maion-core"}
packet = {path = "../packet"}
protocol = {path = "../protocol"}
regex = "1.5.4"
