[package]
authors = ["zegevlier <iamascratcher@gmail.com>"]
edition = "2018"
name = "mc-proxy-v2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
cipher = {path = "../cipher"}
colored = "2.0.0"
config = "0.11.0"
dyn-clone = "1.0.4"
deadqueue = {version = "0.2.0", features = ["unlimited"]}
env_logger = "0.9.0"
erased-serde = "0.3.16"
futures-util = "0.3.17"
hematite-nbt = "0.5.2"
hex = "0.4.3"
log = "0.4.14"
maplit = "1.0.2"
miniz_oxide = "0.5.1"
num-bigint-dig = "0.7.0"
packet = {path = "../packet"}
parking_lot = "0.11.2"
rand = "0.8.4"
regex = "1.5.4"
reqwest = {version = "0.11.7", features = ["json", "blocking"]}
rsa = "0.5.0"
rsa-der = "0.3.0"
sha-1 = "0.10.0"
rustc-serialize = "0.3.24"
serde = {version = "1.0.131", features = ["derive"]}
serde_json = "1.0.73"
tokio = {version = "1.14.0", features = ["net", "rt-multi-thread", "macros", "io-util", "time"]}
tokio-tungstenite = {version = "0.16.1", features = ["native-tls"]}
trust-dns-resolver = "0.20.3"
protocol = {path = "../protocol"}
mcore = {path = "../maion-core"}
plugin = {path = "../plugin"}
config_loader = {path = "../config-loader"}
plugin_loader = {path = "../plugin-loader"}