[package]
authors = ["zegevlier <iamascratcher@gmail.com>"]
edition = "2018"
name = "proxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cipher = {path = "../cipher"}
colored = "2.0.0"
config_loader = {path = "../config-loader"}
deadqueue = {version = "0.2.0", features = ["unlimited"]}
env_logger = {version = "0.9.0", features = ["termcolor", "atty", "humantime"], default_features = false}
erased-serde = "0.3.16"
hematite-nbt = "0.5.2"
log = "0.4.14"
mcore = {path = "../maion-core"}
miniz_oxide = "0.5.1"
packet = {path = "../packet"}
parking_lot = "0.11.2"
plugin = {path = "../plugin"}
plugin_loader = {path = "../plugin-loader"}
protocol = {path = "../protocol"}
rand = "0.8.4"
serde = {version = "1.0.131", features = ["derive"]}
serde_json = "1.0.73"
tokio = {version = "1.14.0", default_features = false, features = []}
#"net", "rt-multi-thread", "macros", "io-util", "time"
trust-dns-resolver = "0.20.3"
# srv-rs = "0.2.0"
