[package]
edition = "2021"
name = "test-plugin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packet = {path = "../../packet"}
plugin_interface = {path = "../../plugin-interface"}
protocol = {path = "../../protocol"}
tokio = {version = "1.14.0", default_features = false, features = []}
tonic = {version = "0.6.2"}
